Inform frontend about found cells
